# vcf2md

./: .gitignore  README.md  pyproject.toml
Assistants/: main.md
src/: __init__.py  vcf_to_markdown.py
